--- a/style.css
+++ b/style.css
@@ -1,313 +1,322 @@
 @font-face {
-    font-family: 'shatomiregular';
-    src: url('webfont-kit/shatomi-pkrrg-webfont.woff2') format('woff2'),
-         url('webfont-kit/shatomi-pkrrg-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "shatomiregular";
+  src: url("webfont-kit/shatomi-pkrrg-webfont.woff2") format("woff2"),
+    url("webfont-kit/shatomi-pkrrg-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'cf_fbi_old_reportregular';
-    src: url('webfont-kit/cffbioldreportregular-mjex-webfont.woff2') format('woff2'),
-         url('webfont-kit/cffbioldreportregular-mjex-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
+  font-family: "cf_fbi_old_reportregular";
+  src: url("webfont-kit/cffbioldreportregular-mjex-webfont.woff2")
+      format("woff2"),
+    url("webfont-kit/cffbioldreportregular-mjex-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 @font-face {
-    font-family: 'norsebold';
-    src: url('webfont-kit/norse-bold-webfont.woff2') format('woff2'),
-         url('webfont-kit/norse-bold-webfont.woff') format('woff');
-    font-weight: normal;
-    font-style: normal;
-
+  font-family: "norsebold";
+  src: url("webfont-kit/norse-bold-webfont.woff2") format("woff2"),
+    url("webfont-kit/norse-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
 }
 
 body {
-    font-family: 'norsebold';
-    padding: 0;
-    margin: 0;
+  font-family: "norsebold";
+  padding: 0;
+  margin: 0;
 }
 
 .outmost-container {
-    display: grid;
-    grid-template: 100px 1fr 100px / 1fr 4fr 1fr;
-    margin: 0;
-    height: 100vh;
-    width: 100vw;
+  display: grid;
+  grid-template: 100px 1fr 100px / 1fr 4fr 1fr;
+  margin: 0;
+  height: 100vh;
+  width: 100vw;
 
-    position: relative;
+  position: relative;
 }
 
 .header {
-    grid-column: 2/ 3;
-    /* background-color: #AA845A; */
-    background-image: url(img/wood-texture.jpg);
-    background-size: auto;
-    display: flex;
+  grid-column: 2/ 3;
+  /* background-color: #AA845A; */
+  background-image: url(img/wood-texture.jpg);
+  background-size: auto;
+  display: flex;
 
-    align-items: center;
-    justify-content: center;
-    font-size: 28px;
-    font-weight: bold;
-    border-bottom: 2px solid #664228;
-    /* box-shadow: inset 0px 3px 5px #664228; */
+  align-items: center;
+  justify-content: center;
+  font-size: 28px;
+  font-weight: bold;
+  border-bottom: 2px solid #664228;
+  /* box-shadow: inset 0px 3px 5px #664228; */
 }
 
 .footer {
-    grid-column: 2/3;
-    grid-row: 3;
-    background-color: #AA845A;
-    background-image: url(img/wood-texture.jpg);
-    background-size: auto;
-    border-top: 2px solid #664228;
+  grid-column: 2/3;
+  grid-row: 3;
+  background-color: #aa845a;
+  background-image: url(img/wood-texture.jpg);
+  background-size: auto;
+  border-top: 2px solid #664228;
 }
 
 .sidebar {
-    background-color: #AA845A;
-    background-image: url(img/wood-texture.jpg);
-    background-size: auto;
-    outline: 3px solid #664228;
+  background-color: #aa845a;
+  background-image: url(img/wood-texture.jpg);
+  background-size: auto;
+  outline: 3px solid #664228;
 }
 
 #sidebar1 {
-    grid-row: 1/4;
+  grid-row: 1/4;
 }
 
 #sidebar2 {
-    grid-column: 3;
-    grid-row: 1/4;
+  grid-column: 3;
+  grid-row: 1/4;
 }
 
 .book-container {
-    grid-row: 2/3;
-    grid-column: 2/3;
-    background-color: #AA845A;
-    box-shadow: inset 5px 5px 10px #664228, inset -5px 5px 10px #664228;
+  grid-row: 2/3;
+  grid-column: 2/3;
+  background-color: #aa845a;
+  box-shadow: inset 5px 5px 10px #664228, inset -5px 5px 10px #664228;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fill, min(150px));
-    align-items: end;
-    gap: 1px;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, min(150px));
+  align-items: end;
+  gap: 1px;
 
-    position: relative;
+  position: relative;
 }
-
 
 /* Prompt styling */
 .promptContainerContainer {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.5);
 
-    display: none;
-    justify-content: center;
-    align-items: center;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .promptContainerContainer.active {
-    display: flex;
+  display: flex;
 }
 
 .promptContainer {
-    background: white;
-    padding: 2rem;
-    border-radius: 8px;
-    max-width: 400px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.25);
-    width: 300px;
-    text-align: center;
+  background: white;
+  padding: 2rem;
+  border-radius: 8px;
+  max-width: 400px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+  width: 300px;
+  text-align: center;
 }
 
-input[id="title"], input[id="author"], input[id="pages"] {
-    appearance: none;
-    margin-left: 20px;
+input[id="title"],
+input[id="author"],
+input[id="pages"] {
+  appearance: none;
+  margin-left: 20px;
 }
 
-label[id="title"], label[id="author"], label[id="pages"] {
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    align-items: center;
+label[id="label-title"],
+label[id="label-author"],
+label[id="label-pages"] {
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  align-items: center;
 }
 
-.readRadioDiv, label[id="title"], label[id="author"], label[id="pages"] {
-    margin-bottom: 10px;
+.readRadioDiv,
+label[id="label-title"],
+label[id="label-author"],
+label[id="label-pages"] {
+  margin-bottom: 10px;
 }
 
 .btn {
-    border-radius: 5px;
-    background-color: #eeeeee;
-    padding: 10px;
+  border-radius: 5px;
+  background-color: #eeeeee;
+  padding: 10px;
 
-    border: none;
+  border: none;
 }
 
 .newBookBtn {
-    font-weight: bold;
-    position: absolute;
-    right: 90px;
-    bottom: 20px;
+  font-weight: bold;
+  position: absolute;
+  right: 90px;
+  bottom: 20px;
 
-    transition: transform 0.3s ease;
+  transition: transform 0.3s ease;
 }
 
 .newBookBtn:hover {
-
-    cursor: pointer;
-    transform: translateY(-3px);
+  cursor: pointer;
+  transform: translateY(-3px);
 }
 
 .submitBtn {
-    background-color: #e2ebf2;
-    padding: 10px 30px;
-    border-radius: 20px;
+  background-color: #e2ebf2;
+  padding: 10px 30px;
+  border-radius: 20px;
 }
 
 .readStatus.read:hover {
-    cursor: pointer;
-    color: #49db3c;
+  cursor: pointer;
+  color: #49db3c;
 }
 
 .readStatus.notRead:hover {
-    cursor: pointer;
-    color: #db3c3c;
+  cursor: pointer;
+  color: #db3c3c;
 }
 
 /* Dialog && Modal */
 .dialog-any:not([open]) {
-    display: none;
+  display: none;
 }
 
 .dialog-any {
-    outline: none;
-    border: none;
-    background-image: url(img/open-book.png); /*By gallery.yopriceville*/
-    background-repeat: no-repeat;
-    background-size: contain;
-    background-color: rgba(0, 0, 0, 0);
-    height: 400px;
-    width: 600px;
+  outline: none;
+  border: none;
+  background-image: url(img/open-book.png); /*By gallery.yopriceville*/
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-color: rgba(0, 0, 0, 0);
+  height: 400px;
+  width: 600px;
 
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
-.closerDia::backdrop, .dialog-any::backdrop {
-    background: rgba(0, 0, 0, 0.5);
+.closerDia::backdrop,
+.dialog-any::backdrop {
+  background: rgba(0, 0, 0, 0.5);
 }
 
 .right-side-dia {
-    margin-left: 40px;
-    margin-bottom: 50px;
-    font-size: 18px;
-    font-weight: bold;
-    font-family: 'cf_fbi_old_reportregular';
+  margin-left: 40px;
+  margin-bottom: 50px;
+  font-size: 18px;
+  font-weight: bold;
+  font-family: "cf_fbi_old_reportregular";
 
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .left-side-dia {
-    /* outline: auto; */
-    /* margin-top: 2px; */
-    margin-right: 40px;
-    margin-bottom: 50px;
-    font-size: 10px;
-    font-family: 'shatomiregular';
-    padding: 20px;
+  /* outline: auto; */
+  /* margin-top: 2px; */
+  margin-right: 40px;
+  margin-bottom: 50px;
+  font-size: 10px;
+  font-family: "shatomiregular";
+  padding: 20px;
 }
 
 /* Book Styling */
 .bookOnShelf {
-    outline: 1px solid black;
-    display: grid;
-    grid-template-rows: 1fr 2fr 1fr;
+  outline: 1px solid black;
+  display: grid;
+  grid-template-rows: 1fr 2fr 1fr;
 
-    transition: transform 0.3s ease;
-    opacity: 1;
+  transition: transform 0.3s ease;
+  opacity: 1;
 }
 
 .bookOnShelf.background {
-    opacity: 0;
+  opacity: 0;
 }
 
 .bookOnShelf:hover {
-    cursor: pointer;
-    transform: translateY(-7px);
+  cursor: pointer;
+  transform: translateY(-7px);
 }
 
 .bookHead {
-    border-bottom: 20px double #664228 ;
+  border-bottom: 20px double #664228;
 }
 
 .bookFoot {
-    border-top: 20px double #664228;
+  border-top: 20px double #664228;
 }
 
 .bookBody {
-    font-size: 26px;
-    text-align: center;
-    margin: 60% auto;
+  font-size: 26px;
+  text-align: center;
+  margin: 60% auto;
 }
 
 /* Book to the middle when it's focus */
 
 .promptMiddle {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    background: rgba(0, 0, 0, 0);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0);
 
-    display: none;
-    justify-content: center;
-    align-items: center;
+  display: none;
+  justify-content: center;
+  align-items: center;
 }
 
 .promptMiddle.active {
-    display: flex;
+  display: flex;
 }
 
 /* View/Remove/Cancel Dialog */
 .closerDia {
-    outline: 0;
-    border: 0;
-    background: rgba(0, 0, 0, 0);
+  outline: 0;
+  border: 0;
+  background: rgba(0, 0, 0, 0);
 }
 
 .btn2 {
-    flex:1;
-    padding: 10px;
-    width: 80px;
+  flex: 1;
+  padding: 10px;
+  width: 80px;
 
-    outline: 0;
-    border-radius: 10px;
+  outline: 0;
+  border-radius: 10px;
 }
 
-#view, #cancel, #remove {
-    transition: transform 0.3s ease;
+#view,
+#cancel,
+#remove {
+  transition: transform 0.3s ease;
 }
 
-#view:hover, #remove:hover, #cancel:hover {
-    cursor: pointer;
-    transform: translateY(-5px);
+#view:hover,
+#remove:hover,
+#cancel:hover {
+  cursor: pointer;
+  transform: translateY(-5px);
 }
 
 #view:hover {
-    background-color: rgba(115, 255, 80, 1);
+  background-color: rgba(115, 255, 80, 1);
 }
 
 #remove:hover {
-    background-color: rgba(238, 45, 45, 1);
+  background-color: rgba(238, 45, 45, 1);
 }
 
 #cancel:hover {
-    background-color: rgba(163, 163, 163, 1);
+  background-color: rgba(163, 163, 163, 1);
 }
